nothing is changed

--- a/bootdo/pom.xml
+++ b/bootdo/pom.xml
@@ -47,6 +47,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <!-- 使用thymeleaf模板和使用thymeleaf避坑包-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
@@ -207,7 +208,7 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
-        <!-- xss过滤组件 -->
+        <!-- xss过滤组件 对敏感内容进行过滤比如<script>等-->
         <dependency>
             <groupId>org.jsoup</groupId>
             <artifactId>jsoup</artifactId>
