--- a/bootdo/src/main/resources/application-dev.yml
+++ b/bootdo/src/main/resources/application-dev.yml
@@ -10,7 +10,7 @@ spring:
     driverClassName: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3306/bootdo?useUnicode=true&characterEncoding=utf8
     username: root
-    password: root
+    password: 7189826
     initialSize: 1
     minIdle: 3
     maxActive: 20
